src/components/Header/Navbar.module.scss
@use '@styles/_globals.module' as *;

.nav {
  transition: 0.3s ease-in-out;
  overflow: hidden;

  display: flex;
  align-items: center;
}

$duration: 0.2s;
$distance: 8px;
$easeOutBack: cubic-bezier(0.175, 0.885, 0.32, 1.275);

.navLinks {
  display: flex;
  justify-content: space-evenly;
  gap: 2rem;
  align-items: baseline;
  font-size: 1.2rem;
  line-height: 1.8;

  @include smartphone {
    flex-direction: column;
    font-size: 1.5rem;
    gap: 1rem;

    & > .link {
      margin: 0 1rem;
    }

    position: absolute;
    display: flex;
    top: 76px;
    right: 0;
    z-index: 1;
    overflow: hidden;
    padding: 1rem;
    width: 100%;
    height: auto;
    opacity: 1;
    -webkit-box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.3);
    box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.3);
    transition: 0.3s ease-in-out;

    @include dark {
      background-color: $light-d;
    }
  }
}

.link {
  display: inline-block;
  position: relative;
  text-decoration: none;

  &:before,
  &:after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 2px;
    background-color: $primary-500;
  }

  &:before {
    opacity: 0;
    transform: translateY(-$distance);
    transition: transform 0s $easeOutBack, opacity 0s;
  }

  &:after {
    opacity: 0;
    transform: translateY(calc($distance/2));
    transition: transform $duration $easeOutBack, opacity $duration;
  }

  &:hover,
  &:focus {
    &:before,
    &:after {
      opacity: 1;
      transform: translateY(0);
    }
    &:before {
      transition: transform $duration $easeOutBack, opacity $duration;
    }
    &:after {
      transition: transform 0s $duration $easeOutBack, opacity 0s $duration;
    }
  }

  @include dark {
    &:before,
    &:after {
      background-color: $primary-500;
    }
  }
}

.active {
  @include bold;
}

.menu {
  display: none;
  align-self: center;

  @include smartphone {
    display: block;

    &.open {
      display: none;
    }
  }
}

.close {
  display: none;

  @include smartphone {
    display: none;

    &.open {
      display: block;
    }
  }
}

